--- a/pom.xml
+++ b/pom.xml
@@ -216,5 +216,12 @@
   <prerequisites>
     <maven>3.0.3</maven>
   </prerequisites>
+  <servers>
+  <server>
+    <id>maven-public</id> 
+    <username>admin</username>
+    <password>admin</password>
+  </server>
+</servers>       
 
 </project>
